# Discord-Selfbot-Utilities

./: .gitignore  README.md  pyproject.toml
_loose-files/: deleter.py  message_logging.py  message_logging_cog.py
src/: config_example.json  main.py  original_del_msgs.py  original_recon.py  original_save_images.py  process_wordlist.py  utils.py
src/cogs/: save_emojis.py  save_images.py  save_messages_twitch_relay.py
